<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/modelx"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            app:srcCompat="@drawable/mdlx" />

        <Button
            android:id="@+id/add_buttonmx"
            android:onClick="add_modelx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/modelx"
            android:layout_marginTop="98dp"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/remove_buttonmx"
            android:onClick="remove_modelx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_buttonmx"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-49dp"
            android:layout_marginEnd="12dp"
            android:text="@string/remove_button" />

        <TextView
            android:id="@+id/subtotal_imagetxtmx"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/add_buttonmx"
            android:layout_alignEnd="@+id/subtotal_countmx"
            android:layout_marginEnd="101dp"
            android:text="@string/quantity_show"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subtotal_countmx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/modelx"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="132dp"
            android:textSize="18sp" />

        <TextView

            android:layout_width="182dp"
            android:layout_height="57dp"
            android:layout_alignBottom="@+id/modelx"
            android:layout_marginBottom="6dp"
            android:text="@string/modelx_text"
            android:textColor="#000000"
            android:textSize="24sp" />

        ></RelativeLayout>
</android.support.v7.widget.CardView>
