<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/model3"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            app:srcCompat="@drawable/mdl3" />

        <Button
            android:id="@+id/add_buttonm3"
            android:onClick="add_model3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model3"
            android:layout_marginTop="98dp"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/remove_buttonm3"
            android:onClick="remove_model3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model3"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="14dp"
            android:text="@string/remove_button" />

        <TextView
            android:id="@+id/subtotal_imagetxtm3"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/model3_text"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="241dp"
            android:text="@string/quantity_show"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subtotal_countm3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model3"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="132dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/model3_text"
            android:layout_width="182dp"
            android:layout_height="57dp"
            android:layout_alignBottom="@+id/model3"
            android:layout_marginBottom="6dp"
            android:text="@string/model3_text"
            android:textColor="#000000"
            android:textSize="24sp" />

        ></RelativeLayout>
</android.support.v7.widget.CardView>
