<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/models"
            android:layout_width="match_parent"
            android:layout_height="336dp"
            app:srcCompat="@drawable/mdls" />

        <Button
            android:id="@+id/add_buttonms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/models"
            android:layout_marginTop="98dp"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/remove_buttonms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="433dp"
            android:layout_marginEnd="6dp"
            android:text="@string/remove_button" />

        <TextView
            android:id="@+id/subtotal_imagetxtms"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/models"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="-142dp"
            android:layout_toStartOf="@+id/remove_buttonms"
            android:layout_toEndOf="@+id/add_buttonms"
            android:text="@string/subtotal_show"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subtotal_countms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/models"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="132dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/models_text"
            android:layout_width="182dp"
            android:layout_height="57dp"
            android:layout_alignBottom="@+id/models"
            android:layout_marginBottom="6dp"
            android:text="@string/models_text"
            android:textColor="#000000"
            android:textSize="24sp" /><![CDATA[

        >]]>
    </RelativeLayout>
</android.support.v7.widget.CardView>
